put a-tag around the whole teaser

--- a/_mod-simple-teaser.scss
+++ b/_mod-simple-teaser.scss
@@ -3,6 +3,11 @@
 	@include prefix(box-sizing, border-box);
 	margin: 20px 0;
 
+	a {
+		display: block;
+		text-decoration: none;
+	}
+
 	img {
 		width: 100%;
 	}
