--- a/_mod-simple-teaser.scss
+++ b/_mod-simple-teaser.scss
@@ -1,5 +1,5 @@
-/* mod-simple-teaser-wrapper */
-.mod-simple-teaser-wrapper {
+/* mod-simple-teaser */
+.mod-simple-teaser {
 	@include prefix(box-sizing, border-box);
 	margin: 20px 0;
 
