--- a/_mod-simple-teaser.scss
+++ b/_mod-simple-teaser.scss
@@ -12,13 +12,7 @@
 		width: 100%;
 	}
 
-	/* iPhone 5 (landscape)  */
-	@media only screen and (min-width: 568px) {
-
-	}
-
-	/* iPad (portrait) */
-	@media only screen and (min-width: $breakpoint2) {
+	@include respond-min($breakpoint-min-s) {
 		float: left;
 		width: 50%;
 		padding: 20px;
@@ -29,7 +23,7 @@
 	}
 
 	/* Desktop */
-	@media only screen and (min-width: $breakpoint3) {
+	@include respond-min($breakpoint-min-m) {
 		width: 33.3333333333%;
 	}
 
